[project]
name = "document-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.5.1",
    "fastapi>=0.139.0",
    "isort>=8.0.1",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.18",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
    "streamlit-chat>=0.1.1",
    "unstructured>=0.23.1",
]
